--- a/InstagramSeleniumBot/InstagramSeleniumBot.csproj
+++ b/InstagramSeleniumBot/InstagramSeleniumBot.csproj
@@ -53,7 +53,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\DBmanager.cs" />
-    <Compile Include="Bots\CollectingAccounts.cs" />
     <Compile Include="Class\Writer.cs" />
     <Compile Include="InstaBotForm.cs">
       <SubType>Form</SubType>
@@ -61,13 +60,10 @@
     <Compile Include="InstaBotForm.Designer.cs">
       <DependentUpon>InstaBotForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Bots\ProcessingAccounts.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bots\Bot.cs" />
     <Compile Include="Class\TextBoxStreamWriter.cs" />
-    <Compile Include="Bots\SubscribeAccounts.cs" />
-    <Compile Include="Bots\UnSubscribeAccounts.cs" />
     <EmbeddedResource Include="InstaBotForm.resx">
       <DependentUpon>InstaBotForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,4 +100,11 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.88.0.4324.9600\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.88.0.4324.9600\build\Selenium.WebDriver.ChromeDriver.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.88.0.4324.9600\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.88.0.4324.9600\build\Selenium.WebDriver.ChromeDriver.targets'))" />
+  </Target>
 </Project>
