--- a/InstagramSeleniumBot/InstagramSeleniumBot.csproj
+++ b/InstagramSeleniumBot/InstagramSeleniumBot.csproj
@@ -83,18 +83,18 @@
     <Compile Include="Class\ReaderJson.cs" />
     <Compile Include="Class\DBmanager.cs" />
     <Compile Include="Class\Writer.cs" />
-    <Compile Include="InstaBotForm.cs">
+    <Compile Include="Subscribe.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InstaBotForm.Designer.cs">
-      <DependentUpon>InstaBotForm.cs</DependentUpon>
+    <Compile Include="Subscribe.Designer.cs">
+      <DependentUpon>Subscribe.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bots\Bot.cs" />
     <Compile Include="Class\TextBoxStreamWriter.cs" />
-    <EmbeddedResource Include="InstaBotForm.resx">
-      <DependentUpon>InstaBotForm.cs</DependentUpon>
+    <EmbeddedResource Include="Subscribe.resx">
+      <DependentUpon>Subscribe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
