--- a/InstagramSeleniumBot/InstagramSeleniumBot.csproj
+++ b/InstagramSeleniumBot/InstagramSeleniumBot.csproj
@@ -80,7 +80,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class\ReaderJson.cs" />
+    <Compile Include="Class\ReaderFile.cs" />
     <Compile Include="Class\DBmanager.cs" />
     <Compile Include="Class\Writer.cs" />
     <Compile Include="Subscribe.cs">
